[project]
name = "counter_aist_aloha"
version = "0.1.0"
description = "Analysis tools for AIST ALOHA robot HDF5 datasets"
authors = [
    { name = "motoda" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "numpy",
    "tqdm",
]

[tool.setuptools]
packages = ["counter_aist_aloha"]

[project.scripts]
analysis = "counter_aist_aloha.bin.analysis:main"
all_analysis = "counter_aist_aloha.bin.all_analysis:main"